--- a/Dog_vs_Cat_Using_Small_Data(Kaggle)_with_Keras.ipynb
+++ b/Dog_vs_Cat_Using_Small_Data(Kaggle)_with_Keras.ipynb
@@ -33,7 +33,7 @@
       },
       "source": [
         "# Kaggle Challenge : Dogs-vs-Cats - Binary Image Classification using Keras\n",
-        "해당 포스트는 [Kaggle  Dogs-vs-Cats challenge](https://www.kaggle.com/c/dogs-vs-cats) 해결하기위해 만들었습니다. 여러 가지 자료들을 참고하여 만든 포스트 입니다.\n",
+        "해당 포스트는 [Kaggle  Dogs-vs-Cats challenge](https://www.kaggle.com/c/dogs-vs-cats) 해결하기위해 만들었으며, 여러 가지 자료들을 참고하여 만든 포스트 입니다.\n",
         "\n",
         "\n",
         "*   개발 환경 : google colab, Python3, Tensorflow, Keras\n",
