--- a/Dog_vs_Cat_Using_Small_Data(Kaggle)_with_Keras.ipynb
+++ b/Dog_vs_Cat_Using_Small_Data(Kaggle)_with_Keras.ipynb
@@ -6,6 +6,7 @@
       "name": "Dog vs Cat Using Small Data(Kaggle) with Keras.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +34,7 @@
       },
       "source": [
         "# Kaggle Challenge : Dogs-vs-Cats - Binary Image Classification using Keras\n",
-        "해당 포스트는 [Kaggle  Dogs-vs-Cats challenge](https://www.kaggle.com/c/dogs-vs-cats) 해결하기위해 만들었으며, 여러 가지 자료들을 참고하여 만든 포스트 입니다.\n",
+        "해당 포스트는 [Kaggle  Dogs-vs-Cats challenge](https://www.kaggle.com/c/dogs-vs-cats) 해결하기위해 만들었으며, 여러 가지 자료들을 참고하여 만든 포스트 입니다. [이분을 많이 참조..](https://github.com/mjbhobe/dl-articles-medium)\n",
         "\n",
         "\n",
         "*   개발 환경 : google colab, Python3, Tensorflow, Keras\n",
@@ -45,7 +46,7 @@
         "*   Validation {개: 2,500, 고양이: 2,500} (총 5,000개)\n",
         "*   IMAGE_HEIGHT, IMAGE_WIDTH, NUM_CHANNELS, BATCH_SIZE = 150, 150, 3, 32\n",
         "\n",
-        "**결론** : **직접 모델을 생성하여 정확도를 높이는 것도 좋지만, 기존에 있는 좋은 모델을 가지고 학습하는 방법이 더 효과가 좋을 수 있다.**\n",
+        "**결론** : **직접 모델을 생성하여 정확도를 높이는 것도 좋지만, 기존에 있는 좋은 모델을 가지고 fine tuning 하여 학습하는 방법이 더 효과가 좋을 수 있다.**\n",
         "\n",
         "참고 사항\n",
         "* Google Colab에서이 노트북을 실행할 때 아래 셀에`USE_COLAB = True`를 설정하고 그렇지 않으면`USE_COLAB = False`를 설정하세요.\n",
@@ -125,7 +126,7 @@
         "from google.colab import files\n",
         "src = list(files.upload().values())[0]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7817,9 +7818,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 899
+          "height": 844
         },
-        "outputId": "7848c4d4-2ef3-479c-c62b-2856784c612d"
+        "outputId": "efaeeb29-335d-47e7-f4ed-1829d0e9d8e8"
       },
       "source": [
         "from tensorflow.keras.applications import VGG16\n",
@@ -7835,13 +7836,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "58892288/58889256 [==============================] - 0s 0us/step\n",
             "Model: \"vgg16\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_1 (InputLayer)         [(None, 150, 150, 3)]     0         \n",
+            "input_2 (InputLayer)         [(None, 150, 150, 3)]     0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 150, 150, 64)      1792      \n",
             "_________________________________________________________________\n",
@@ -9654,7 +9653,7 @@
         "from google.colab import files\n",
         "src = list(files.upload().values())[0]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9796,7 +9795,7 @@
         "#plt.title('%s -> Prediction: %s (%.4f)' % (actual_name, pred_name, prob))\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
