--- a/Fashion_MNIST.ipynb
+++ b/Fashion_MNIST.ipynb
@@ -6,7 +6,7 @@
       "name": "Fashion-MNIST.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoLuJmt09gd9sHyCUNiZk5",
+      "authorship_tag": "ABX9TyOGwvfptV6Usvi5ZfVb3DnD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "print('TensorFlow version : ', tf.__version__)\n",
         "print('Keras version : ', keras.__version__)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
         "\n",
         "print(\"x_train shape:\", x_train.shape, \"y_train shape:\", y_train.shape)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +94,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sfkTOnjqdsw7",
+        "colab_type": "text"
+      },
+      "source": [
+        "![image.png](https://raw.githubusercontent.com/KerasKorea/KEKOxTutorial/master/media/10_1.png)"
       ]
     },
     {
@@ -136,7 +146,7 @@
         "# 학습 데이터 중에서 이미지 한 장을 보여줍니다.\n",
         "plt.imshow(x_train[img_index])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +202,7 @@
         "print(\"Number of train data - \" + str(len(x_train)))\n",
         "print(\"Number of test data - \" + str(len(x_test)))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +250,7 @@
         "print(x_valid.shape[0], 'validation set')\n",
         "print(x_test.shape[0], 'test set')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +762,7 @@
         "             optimizer='adam',\n",
         "             metrics=['accuracy'])"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +779,7 @@
       "source": [
         "vgg16_model.summary()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +863,7 @@
         "         validation_data=(x_valid, y_valid),\n",
         "         callbacks=[checkpointer])"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +946,7 @@
         "# 테스트 정확도\n",
         "print('\\n', 'Test accuracy:', score[1])"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +998,7 @@
         "                                  fashion_mnist_labels[true_index]),\n",
         "                                  color=(\"green\" if predict_index == true_index else \"red\"))"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
