Colaboratory를 통해 생성됨

--- a/연구실_기본코드.ipynb
+++ b/연구실_기본코드.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFKfhp1mn78Wz2LqW773p5",
+      "authorship_tag": "ABX9TyN/+8ZD5fwk2Co9uXn+1VGY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1007,7 +1007,7 @@
         "    global label_packed\n",
         "    image = Image.open(file_path)\n",
         "    # image = image.load_img(image, target_size=(IMG, IMG))\n",
-        "    image = image.resize((150,150))\n",
+        "    image = image.resize((IMAGE_HEIGHT,IMAGE_WIDTH))\n",
         "    # image = image.img_to_array(img)\n",
         "    image = np.expand_dims(image, axis=0)\n",
         "    image = np.array(image)\n",
@@ -1018,7 +1018,7 @@
         "    # sign = pred[0]\n",
         "    print(sign)"
       ],
-      "execution_count": 55,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -1030,12 +1030,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5c02980d-be43-4dca-e4a3-18d01156384b"
+        "outputId": "67026741-b54e-4449-e37f-8cada1dea968"
       },
       "source": [
         "classify('01test.jpg')"
       ],
-      "execution_count": 57,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
