--- a/연구실_기본코드.ipynb
+++ b/연구실_기본코드.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNig7MPrNSNtZgA3nrt2boz",
+      "authorship_tag": "ABX9TyMfZ4LxafF0TzgpDUQjWlLx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,15 +39,12 @@
         "\n",
         "\n",
         "*   개발 환경 : google colab, Python3, Tensorflow, Keras\n",
-        "*   실험 모델 : 자체 제작 CNN, VGG16(Transfer Learning)\n",
-        "*   실험 순서 : 자체 제작 CNN -> Image Augmentation을 사용한 CNN -> pre traing VGG16 -> fine tuning VGG16\n",
+        "*   실험 모델 : VGG16(Transfer Learning)\n",
         "*   실험에 쓰인 데이터 : Kaggle Dogs vs Cats challenge\n",
         "*   Test {개: 1,000, 고양이: 1,000} (총 2,000개)\n",
         "*   Training {개: 5,000, 고양이: 5,000} (총 10,000개)\n",
         "*   Validation {개: 2,500, 고양이: 2,500} (총 5,000개)\n",
         "*   IMAGE_HEIGHT, IMAGE_WIDTH, NUM_CHANNELS, BATCH_SIZE = 150, 150, 3, 32\n",
-        "\n",
-        "**결론** : **직접 모델을 생성하여 정확도를 높이는 것도 좋지만, 기존에 있는 좋은 모델을 가지고 fine tuning 하여 학습하는 방법이 더 효과가 좋을 수 있다.**\n",
         "\n",
         "참고 사항\n",
         "* Google Colab에서이 노트북을 실행할 때 아래 셀에`USE_COLAB = True`를 설정하고 그렇지 않으면`USE_COLAB = False`를 설정하세요.\n",
