Colaboratory를 통해 생성됨

--- a/Dogs_vs_Cats_Binary_Image_Classification_using_Keras_코드.ipynb
+++ b/Dogs_vs_Cats_Binary_Image_Classification_using_Keras_코드.ipynb
@@ -6,13 +6,13 @@
       "name": "Kaggle Challenge : Dogs-vs-Cats - Binary Image Classification using Keras 코드.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "HE-JTmjLApKN",
         "tbb1Zhe5tyO8",
         "EiKWhwVE2Utm",
         "T-3yx8um7usX",
-        "voZTC5W_8dVq"
+        "voZTC5W_8dVq",
+        "wbCMhPkxhezL"
       ],
-      "authorship_tag": "ABX9TyOhacw4f0teKymzljnFaRH0",
+      "authorship_tag": "ABX9TyMb22HlmmLQBvfCC3ANpfeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,11 +147,6 @@
         "import keras\n",
         "print('Using Tensorflow version ', tf.__version__)\n",
         "print('Using keras version ', keras.__version__)\n",
-        "\n",
-        "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
-        " \n",
-        "plt.style.use('seaborn')\n",
         " \n",
         "seed = 123\n",
         "random.seed(seed)\n",
