Colaboratory를 통해 생성됨

--- a/최종코드.ipynb
+++ b/최종코드.ipynb
@@ -6,7 +6,7 @@
       "name": "최종코드.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO70FWWhelEU6jpYccu5eGG",
+      "authorship_tag": "ABX9TyMmMLGSy/7XaZg7c2j25W9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,37 +101,45 @@
       "cell_type": "code",
       "metadata": {
         "id": "QrMMQwrLyYOG",
-        "outputId": "42f05480-14c7-4615-9af4-8a88a310494f",
+        "outputId": "b2cc371e-1345-4adf-fb1e-59e1311536ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 298
+          "height": 404
         }
       },
       "source": [
+        "# wget 또는 git\n",
+        "# 오류 시 https://github.com/4nchez/Dataset/blob/main/cats_vs_dogs_images_small.zip 에서 다운\n",
         "!wget https://github.com/4nchez/Dataset/raw/main/cats_vs_dogs_images_small.zip #유닉스 wget 명령어 이용\n",
-        "!!git clone https://github.com/4nchez/Dataset.git #git 명령어 이용"
+        "!git clone https://github.com/4nchez/Dataset.git #git 명령어 이용 (git설치 하면, Windows, Unix, Mac 다 사용가능)"
       ],
-      "execution_count": 13,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-10-08 11:12:59--  https://github.com/4nchez/Dataset/raw/main/cats_vs_dogs_images_small.zip\n",
-            "Resolving github.com (github.com)... 140.82.121.3\n",
-            "Connecting to github.com (github.com)|140.82.121.3|:443... connected.\n",
+            "--2020-10-08 12:30:11--  https://github.com/4nchez/Dataset/raw/main/cats_vs_dogs_images_small.zip\n",
+            "Resolving github.com (github.com)... 140.82.121.4\n",
+            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://media.githubusercontent.com/media/4nchez/Dataset/main/cats_vs_dogs_images_small.zip [following]\n",
-            "--2020-10-08 11:12:59--  https://media.githubusercontent.com/media/4nchez/Dataset/main/cats_vs_dogs_images_small.zip\n",
+            "--2020-10-08 12:30:11--  https://media.githubusercontent.com/media/4nchez/Dataset/main/cats_vs_dogs_images_small.zip\n",
             "Resolving media.githubusercontent.com (media.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to media.githubusercontent.com (media.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 548537342 (523M) [application/zip]\n",
             "Saving to: ‘cats_vs_dogs_images_small.zip’\n",
             "\n",
-            "cats_vs_dogs_images 100%[===================>] 523.12M   287MB/s    in 1.8s    \n",
+            "cats_vs_dogs_images 100%[===================>] 523.12M   277MB/s    in 1.9s    \n",
             "\n",
-            "2020-10-08 11:13:01 (287 MB/s) - ‘cats_vs_dogs_images_small.zip’ saved [548537342/548537342]\n",
-            "\n"
+            "2020-10-08 12:30:27 (277 MB/s) - ‘cats_vs_dogs_images_small.zip’ saved [548537342/548537342]\n",
+            "\n",
+            "Cloning into 'Dataset'...\n",
+            "remote: Enumerating objects: 16, done.\u001b[K\n",
+            "remote: Counting objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Total 16 (delta 2), reused 4 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (16/16), done.\n"
           ],
           "name": "stdout"
         }
@@ -140,8 +148,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "wC-TUMX7IVTL"
+      },
+      "source": [
+        "!rm -rf Dataset/\n",
+        "!rm -rf test/\n",
+        "!rm -rf training/\n",
+        "!rm -rf validation/"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4CpUXvp3zMAD",
-        "outputId": "e831b073-367d-4675-dbb7-2bf80d758513",
+        "outputId": "fccaa270-c315-4563-f997-614845265c4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -152,7 +174,7 @@
         "import zipfile\n",
         "\n",
         "local_zip = '/content/cats_vs_dogs_images_small.zip' #wget 명령어로 받았을 때\n",
-        "local_zip = '/content/Dataset/cats_vs_dogs_images_small.zip' #git 명령어로 받았을 때\n",
+        "# local_zip = '/content/Dataset/cats_vs_dogs_images_small.zip' #git 명어령로 받았을 때\n",
         " \n",
         "print('Extracting all images...', flush=True)\n",
         "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
@@ -160,7 +182,7 @@
         "zip_ref.extractall('/content')\n",
         "zip_ref.close()"
       ],
-      "execution_count": 14,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +744,7 @@
         "outputId": "4d4aa441-19f6-4e59-865b-c803cf83bfed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 195
         }
       },
       "source": [
