--- a/bert_xlmroberta_naver_movie.ipynb
+++ b/bert_xlmroberta_naver_movie.ipynb
@@ -774,7 +774,7 @@
         "-> http://jalammar.github.io/illustrated-bert/\n",
         "\n",
         "< XLM-RoBERTa ><br>\n",
-        "-> Facebook AI 팀이 만든 multilingual model, < s >와 < /s > 토큰사용"
+        "-> Facebook AI 팀이 만든 multilingual model, < s > : 0, < /s >: 2, <pad> : 1"
       ]
     },
     {
